# freezeout

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docker.yml  release.yml  rust.yml
crates/bot/: Cargo.toml
crates/bot/examples/: simple.rs
crates/bot/src/: client.rs  lib.rs  main.rs
crates/cards/: Cargo.toml  README.md
crates/cards/examples/: board.rs
crates/cards/src/: cards.rs  egui_cards.rs  lib.rs
crates/cards/src/assets/: README.md
crates/cards/src/deck/: mod.rs  parallel.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  network.rs  terminal.rs
crates/core/: Cargo.toml
crates/core/src/: connection.rs  crypto.rs  game_state.rs  lib.rs  message.rs  poker.rs
crates/core/src/poker/: cards.rs  eval.rs
crates/eval/: Cargo.toml  README.md
crates/eval/examples/: board.rs  chart.rs  eval_all7.rs  par_eval_all7.rs
crates/eval/src/: cards.rs  eval.rs  lib.rs
crates/eval/src/deck/: mod.rs  parallel.rs
crates/eval/src/eval/: eval.rs  eval7.rs  mod.rs
crates/gui/: Cargo.toml  index.html
crates/gui/src/: account_view.rs  cards.rs  connect_view.rs  connection.rs  game_state.rs  game_view.rs  gui.rs  lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: connection.rs  db.rs  lib.rs  main.rs  server.rs  table.rs  tables_pool.rs
crates/server/src/table/: player.rs  state.rs
docker/: Dockerfile  README.md  entrypoint.sh  gen_dev_certs.sh  nginx.conf  run.sh  start_services.sh
