[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gui",
    "crates/server",
]

[workspace.dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
