[workspace]
resolver = "2"
members = [
    "crates/bot",
    "crates/cli",
    "crates/core", 
    "crates/eval",
    "crates/gui",
    "crates/server",
]

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.9.1"
serde = { version = "1.0.216", features = ["derive"] }
snow = "0.9.6"
tokio = { version = "1.44.0" }

[profile.release]
opt-level = 3
