[package]
name = "freezeout-bot"
description = "Freezeout Poker Bot."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
freezeout-core = { workspace = true, features = ["connection"] }
log = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features=["full"] }

[dev-dependencies]
clap = { workspace = true }

