[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker CLI."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-cli"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.28.1", features = ["event-stream"] }
freezeout-core = { path = "../core", features = ["connection"] }
futures-util = { version = "0.3.31" }
tokio = { workspace = true, features=["full"] }
