[package]
name = "freezeout-cli"
description = "Freezeout Poker CLI."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.28.1", features = ["event-stream"] }
freezeout-core = { workspace = true, features = ["connection"] }
futures-util = { version = "0.3.31" }
tokio = { workspace = true, features=["full"] }
