[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker core types."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-core"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3.3"
bip32 = { version = "0.5.2", default-features = false, features = ["mnemonic", "bip39"] }
blake2 = "0.10.6"
bs58 = "0.5.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core", "serde"] }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
itertools = "0.14.0"
