[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker core types."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-core"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3.3"
bip32 = { version = "0.5.2", default-features = false, features = ["mnemonic", "bip39"] }
blake2 = "0.10.6"
bs58 = "0.5.1"
bytes = { version = "1.10.0", optional = true }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["serde"] }
freezeout-eval = { path = "../eval" }
futures-util = { version = "0.3.31", optional = true, features = ["sink"] }
rand = { workspace = true }
serde = { workspace = true }
snow = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features=["net"] }
tokio-tungstenite = { version = "0.26.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
itertools = "0.14.0"

[features]
connection = ["bytes", "futures-util", "snow", "tokio", "tokio-tungstenite"]
