[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker hand evaluator."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-eval"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
xxhash-rust = { version = "0.8.15", optional = true, features = ["xxh3"] }

[features]
eval = ["xxhash-rust"]

