[package]
name = "freezeout-eval"
description = "Freezeout Poker hand evaluator."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
xxhash-rust = { version = "0.8.15", optional = true, features = ["xxh3"] }

[features]
eval = ["xxhash-rust"]
parallel = ["eval"]

[[example]]
name = "eval_all7"
required-features = ["eval"]

[[example]]
name = "par_eval_all7"
required-features = ["parallel"]

[[example]]
name = "chart"
required-features = ["parallel"]
