[package]
name = "freezeout-eval"
description = "Freezeout Poker hand evaluator."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
freezeout-cards = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
clap = { workspace = true }
freezeout-cards = { workspace = true, features = ["egui"] }

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"]}

[target.'cfg(target_os = "linux")'.dev-dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow", "x11"]}

[features]
parallel = ["freezeout-cards/parallel"]

[[example]]
name = "eval_all7"

[[example]]
name = "par_eval_all7"
required-features = ["parallel"]

[[example]]
name = "chart"
required-features = ["parallel"]

[[example]]
name = "board"
