[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker GUI."
edition = "2021"
license = "Apache-2.0"
name = "freezeout-gui"
version = "0.1.0"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "persistence"]}
log = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
