[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker GUI."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-gui"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
ewebsock = "0.8.0"
freezeout-core = { path = "../core" }
image = { version = "0.25.5", default-features = false, features = ["png"] }
indoc = "2"
log = { workspace = true }
serde = { workspace = true }
snow = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", "glow", "persistence"
]}

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", "glow", "x11", "persistence"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
