[package]
name = "freezeout-gui"
description = "Freezeout Poker GUI."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
ewebsock = "0.8.0"
freezeout-cards = { workspace = true, features=["egui"] }
freezeout-core = { workspace = true }
indoc = "2"
log = { workspace = true }
serde = { workspace = true }
snow = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { workspace = true, features = [
    "default_fonts", "glow", "persistence"
]}

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { workspace = true, features = [
    "default_fonts", "glow", "x11", "persistence"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
