[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker server."
edition = "2021"
license = "Apache-2.0"
name = "freezeout-server"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
freezeout-core = { path = "../core" }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
tokio = { version = "1.42.0", features=["full"] }
tokio-tungstenite = "0.25.0"
