[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "Freezeout Poker server."
edition = "2024"
license = "Apache-2.0"
name = "freezeout-server"
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bytes = "1.10.0"
clap = { workspace = true }
directories = "6.0.0"
env_logger = { workspace = true }
freezeout-core = { path = "../core" }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
snow = { workspace = true }
tokio = { version = "1.42.0", features=["full"] }
tokio-tungstenite = "0.26.0"
