[package]
name = "freezeout-server"
description = "Freezeout Poker server."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
directories = "6.0.0"
env_logger = { workspace = true }
freezeout-core = { workspace = true, features = ["connection", "eval"] }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { workspace = true, features=["full"] }
